--- a/zabora/zabbix_agentd.conf
+++ b/zabora/zabbix_agentd.conf
@@ -1,3 +1,4 @@
 UserParameter=zabora[*],/etc/zabbix/scripts/agentd/zabora/zabora.sh -o $1 -s $2 -a $3
-UserParameter=zabora.discovery[*],/etc/zabbix/scripts/agentd/zabora/zabora.sh -o $1 -s $2 -a $3 -j $4
+UserParameter=zabora.db.discovery[*],/etc/zabbix/scripts/agentd/zabora/zabora_discovery.sh -d -j $1
+UserParameter=zabora.tbs.discovery[*],/etc/zabbix/scripts/agentd/zabora/zabora_discovery.sh -t -j $1
 UserParameter=zabora.version,/etc/zabbix/scripts/agentd/zabora/zabora.sh -v short
